[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/panel/panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/button/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/main_menu/main_menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="center_container" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="panel" parent="center_container" instance=ExtResource( 1 )]
margin_left = 290.0
margin_top = 160.0
margin_right = 990.0
margin_bottom = 560.0
rect_min_size = Vector2( 700, 400 )

[node name="margin_container" type="MarginContainer" parent="center_container/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="vbox_container" type="VBoxContainer" parent="center_container/panel/margin_container"]
margin_left = 50.0
margin_top = 50.0
margin_right = 650.0
margin_bottom = 367.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="center_container/panel/margin_container/vbox_container"]
margin_right = 600.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Contando hasta 100"
align = 1
valign = 1

[node name="start_game_button" parent="center_container/panel/margin_container/vbox_container" instance=ExtResource( 3 )]
margin_top = 88.0
margin_right = 600.0
margin_bottom = 138.0
text = "Empezar juego"

[node name="credits_menu_button" parent="center_container/panel/margin_container/vbox_container" instance=ExtResource( 3 )]
margin_top = 158.0
margin_right = 600.0
margin_bottom = 208.0
text = "Cr√©ditos"

[node name="exit_game_button" parent="center_container/panel/margin_container/vbox_container" instance=ExtResource( 3 )]
margin_top = 228.0
margin_right = 600.0
margin_bottom = 278.0
text = "Salir del juego"

[node name="version_label" type="Label" parent="center_container/panel/margin_container/vbox_container"]
margin_top = 298.0
margin_right = 600.0
margin_bottom = 317.0
custom_fonts/font = SubResource( 2 )
text = "v0.3"
align = 1
valign = 1

[connection signal="pressed" from="center_container/panel/margin_container/vbox_container/start_game_button" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="center_container/panel/margin_container/vbox_container/credits_menu_button" to="." method="_on_credits_menu_button_pressed"]
[connection signal="pressed" from="center_container/panel/margin_container/vbox_container/exit_game_button" to="." method="_on_exit_game_button_pressed"]
